# BeanieGarden

./: .gitignore  Cargo.toml  README.md  justfile
.zed/: settings.json  tasks.json
api/: Cargo.toml
api/app/: Cargo.toml
api/app/src/: lib.rs  main.rs
api/app/tests/: search_tests.rs
api/db_setup/: Cargo.toml
api/db_setup/src/: main.rs  seeder.rs
api/entity/: Cargo.toml
api/entity/src/: common_plant.rs  gardening_task.rs  gardening_task_growth_assoication.rs  growth.rs  lib.rs  search.rs  session.rs
api/infra/: Cargo.toml
api/infra/src/: postgres.rs
api/migration/: Cargo.toml
api/migration/src/: m20220101_000001_create_table.rs
api/models/: Cargo.toml
api/models/src/: common_plant.rs  lib.rs  prelude.rs
api/repositories/: Cargo.toml
api/repositories/src/: common_plant_repository.rs  growth_repository.rs  lib.rs  repository.rs  search_results_repository.rs  sql_template_repository.rs
api/seeder/: Cargo.toml
api/seeder/src/: gbif_service.rs  lib.rs  main.rs
api/sql/: search_index.sql  search_query.sql
backend/: Cargo.toml  Dockerfile  README.md
backend/backlog/tasks/: task-1 - Move-query-service-into-repositories.md  task-2 - Create-search-result-respository.md
backend/entity/bindings/: PlantRecord.ts  SearchResults.ts
backend/entity/src/: gbif_genus.rs
backend/infra/: Cargo.toml
backend/models/src/: common_plant.rs
backend/repositories/src/: lib.rs  search_repository.rs
backend/seeder/: Cargo.toml
backend/seeder/src/: gbif_service.rs  main.rs
backend/src/: lib.rs  main.rs
backend/src/ui/: growth.rs  inventory.rs  mod.rs  navbar.rs  search_dialogue.rs
backend/style/: tailwind.css
backlog/: config.yml
core/: Cargo.toml
core/db_setup/: Cargo.toml
core/db_setup/src/: gbif_service.rs  seeder.rs
core/entity/: Cargo.toml
core/entity/src/: gbif_genus.rs  growth.rs  lib.rs  mod.rs  prelude.rs  sea_orm_active_enums.rs  user.rs
core/gbif-results/: gbif-results.json
core/infra/src/: postgres.rs
core/sql/: search_query.sql
core/src/: main.rs
entity/: Cargo.toml
entity/src/: account.rs  common_plant.rs  gardening_task.rs  gardening_task_growth_assoication.rs  gbif_genus.rs  growth.rs  lib.rs  mod.rs  plant_species.rs  prelude.rs  search.rs  user.rs
frontend/: README.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/drizzle/: 0000_true_starjammers.sql  0001_wooden_anthem.sql  0002_kind_ted_forrester.sql  0003_dizzy_alex_power.sql
frontend/src/: app.d.ts
gbif-results/: gbif-results.json
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
models/: Cargo.toml
models/src/: gbif_genus.rs  growth.rs
query-service/: Cargo.toml
query-service/src/: lib.rs
repositories/: Cargo.toml
repositories/src/: common_plants_repository.rs  growth_repository.rs  repository.rs
seeder/: Cargo.toml
seeder/src/: gbif_service.rs  main.rs
shared/: Cargo.toml
shared/src/: lib.rs
src/: app.rs  entities.rs  main.rs
src/api/: gardening_tasks.rs  growth.rs  mod.rs
src/ui/: growth.rs  inventory.rs  mod.rs  month_carousel.rs  navbar.rs  todo_list.rs
(+19 files in other folders)
