[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx-postgres = "0.8.6"
uuid = { workspace = true }
sqlx = { workspace = true, optional = true}
sea-orm = {workspace = true, optional = true}
serde = { workspace = true, optional = true}
chrono = { workspace = true, optional = true}
poem = { workspace = true, optional = true}
poem-openapi = { workspace = true, optional = true}
tokio = {workspace = true, optional = true}

[workspace.dependencies]
sea-orm = { version = "1.1.16", features = ["sqlx-postgres", "macros"] }
sqlx = { version = "0.8.6", features = [
    "postgres",
    "macros",
    "time",
    "runtime-tokio",
] }
uuid = { version = "1.18.1", features = ["serde", "v7"] }
serde = { version = "1.0.219", features = ["derive"] }
chrono = {version = "*"}
poem = { version = "3.1.12", features = ["test"]}
poem-openapi = { version = "5.1.16", features = ["swagger-ui"] }
tokio = { version = "1.48.0", features = ["full"] }

[workspace]
resolver = "3"
members = [ "app", "infra", "migration", "models", "entity", "repositories", "db_setup"]
