[package]
name = "repositories"
version = "0.1.0"
edition = "2024"

[dependencies]
models = { path = "../models" }
entity = { path = "../entity" }
infra = { path = "../infra" }
sea-orm = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
