[package]
name = "seeder"
version = "0.1.0"
edition = "2024"

[dependencies]
entity = { path = "../entity" }
polars = { version = "0.49.1", features = ["lazy"] }
reqwest = "0.12.22"
serde = "1.0.219"
serde_json = "1.0.141"
tempfile = "3.20.0"
tokio = { version = "1.46.1", features = ["full"] }
uuid = { workspace = true }
