[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
migration = { path = "../migration" }
infra = { path = "../infra" }
repositories = { path = "../repositories"}
entity = { path = "../entity"}
sea-orm = {workspace = true}
serde = "1.0.219"
poem = {workspace = true}
poem-openapi = {workspace = true}
tokio = "1.47.1"
tracing-subscriber = "0.3.20"
