[package]
name = "db_setup"
version = "0.1.0"
edition = "2024"

[dependencies]
infra = { path = "../infra"}
migration = {path = "../migration"}
tokio ={ workspace = true}
sea-orm = { workspace = true }
sqlx = { workspace = true }
models = { path = "../models" }
uuid = {workspace = true}
polars = { version = "0.49.1", features = ["lazy"] }
reqwest = "0.12.22"
serde = "1.0.219"
serde_json = "1.0.141"
tempfile = "3.20.0"
minijinja = "2.12.0"
