[package]
name = "repositories"
version = "0.1.0"
edition = "2024"

[dependencies]
infra = { path = "../infra"}
entity  = { path = "../entity"}
uuid = {workspace = true}
chrono = {workspace = true}
sea-orm = { workspace = true }
minijinja = "2.12.0"
strum = { version = "0.27.2", features = ["strum_macros"] }
strum_macros = "0.27.2"
serde.workspace = true
